2016-08-27  Natalia Portillo  <claunia@claunia.com>

	* QCOW2.cs:
	* DiscImageChef.DiscImages.csproj: Add support for QCOW2
	images, closes #44.

	* QED.cs:
	* QCOW.cs: Code cleanup and format.

2016-08-26  Natalia Portillo  <claunia@claunia.com>

	* QED.cs:
	* DiscImageChef.DiscImages.csproj: Added support for QEMU
	Enhanced Disk, closes #38

	* QCOW.cs: Corrected header.

2016-08-26  Natalia Portillo  <claunia@claunia.com>

	* QCOW.cs:
	* DiscImageChef.DiscImages.csproj: Added support for QEMU
	Copy-On-Write disk image, closes #43.

2016-08-26  Natalia Portillo  <claunia@claunia.com>

	* CPCDSK.cs:
	* DiscImageChef.DiscImages.csproj: Added CPCEMU Disk File and
	Extended Disk File.

2016-08-26  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugin.cs: Added floppy address mark sector tag.

2016-08-22  Natalia Portillo  <claunia@claunia.com>

	* ZZZRawImage.cs: Detect X68000 SASI hard disks that use 256
	bytes/sector.
	Correct size of ECMA-154 magnetoptical.

2016-08-21  Natalia Portillo  <claunia@claunia.com>

	* DIM.cs:
	* DiscImageChef.DiscImages.csproj: Added support for X68k .DIM
	format.

	* BLU.cs:
	* GDI.cs:
	* Nero.cs:
	* CopyQM.cs:
	* CDRDAO.cs:
	* CDRWin.cs:
	* TeleDisk.cs:
	* Apple2MG.cs:
	* DiskCopy42.cs:
	* Alcohol120.cs:
	* BlindWrite5.cs:
	* BlindWrite4.cs:
	* ZZZRawImage.cs: In verbose show disk image type and
	comments.

2016-08-18  Natalia Portillo  <claunia@claunia.com>

	* BlindWrite5.cs:
	* DiscImageChef.DiscImages.csproj: Added support for
	BlindWrite 5 format, this closes #58.

2016-08-18  Natalia Portillo  <claunia@claunia.com>

	* BLU.cs:
	* GDI.cs:
	* VHD.cs:
	* Nero.cs:
	* CopyQM.cs:
	* CDRDAO.cs:
	* CDRWin.cs:
	* TeleDisk.cs:
	* Apple2MG.cs:
	* ImageInfo.cs:
	* Alcohol120.cs:
	* DiskCopy42.cs:
	* ZZZRawImage.cs: Added field for drive firmware revision.

	* BlindWrite4.cs: Added field for drive firmware revision.
	Change subchannel informative exception.
	Change application name and version.
