@@ -55,6 +55,7 @@
     <Compile Include="QCOW.cs" />
     <Compile Include="QED.cs" />
     <Compile Include="QCOW2.cs" />
+    <Compile Include="Parallels.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
